--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,7 +12,7 @@ body[data-theme="dark"] {
 body[data-theme="light"] {
   --color-background: #f5f5f5;
   --color-hover: #eeeeee;
-  --color-body: #282c34;
+  --color-body: #1b1e24;
   --color-secondary: #323842;
   --color-scrollbar-thumb: #0a0a0a;
   --color-positive: #389601;
